[package]
name = "tsdb2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive", "env"] }
mysql = "26.0.1"
prost = "0.14.1"
prost-types = "0.14.1"
tokio = { version = "1.47.1", features = ["full", "test-util"] }
tonic = { version = "0.14.2", features = ["channel", "gzip", "server"] }
tonic-prost = "0.14.2"
tonic-web = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
